# advent-of-code

./: .gitignore  Cargo.toml
2022/: Cargo.toml
2022/aoc_helpers/: Cargo.toml
2022/day-01/: Cargo.toml
2022/day-02/: Cargo.toml
2022/day-03/: Cargo.toml
2022/day-05/: Cargo.toml
2022/day-06/: Cargo.toml
2022/day-07/: Cargo.toml
2022/day-08/: Cargo.toml
2023/day01-trebuchet/: day01_1.rs  day01_2.rs
2023/day02-cubeconundrum/: day02-1.rs  day02-2.rs
2023/day04-scratchcards/: day4_2.rs
2023/day06-waitforit/: day06_2.rs
2023/day07-camelcards/: day07_2.rs
2023/day08-hauntedwasteland/: day08_1.rs
2023/day09-miragemaintenance/: day09_1.rs  day09_2.rs
2023/day10-pipemaze/: day10_1.rs  day10_2.rs
2023/day12-hotsprings/: day12_2.rs
2023/day13-pointofincidence/: day13_1.rs  day13_2.rs
2023/day14-parabolicreflectordish/: day14_1.rs
2023/day16-thefloorislava/: day16_1.rs  day16_2.rs
2024/: .gitignore
2024/day-01/: Cargo.toml
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2025/: Cargo.toml
day02-cubeconundrum/: .gitignore
day03-gearratios/: day3_1.rs  day3_2.rs
day04-scratchcards/: day4_1.rs
day06-waitforit/: day06_1.rs
day07-camelcards/: day07_1.rs
day08-hauntedwasteland/: day08_2.rs
day11-cosmicexpansion/: day11_both.rs
day12-hotsprings/: day12_2.rs
day13-pointofincidence/: day13_2.rs
day14-parabolicreflectordish/: day14_1.rs  day14_2.rs
day15-lenslibrary/: day15_1.rs  day15_2.rs
day16-thefloorislava/: day16_1.rs
day17-clumsycrucible/: day17_1.rs
(+18 files in other folders)
